--- a/AuthService/src/main/resources/application.properties
+++ b/AuthService/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.sql.init.mode=always
 spring.jpa.show-sql=true
 spring.main.allow-circular-references=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-spring.application.name=AUTHSERVICE
+spring.application.name=authservice
 #zipkin:
 #base-url: http://localhost:9411
 
