--- a/CourseService/src/main/resources/application.properties
+++ b/CourseService/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.application.name=CourseService
 #zipkin:
 #base-url: http://localhost:9411
 
-#server.port=8091
+server.port=8081
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.fetch-registry=true
